# aw-timeblock

./: .gitignore  .mise.toml  LICENSE  README.md  plan.example.yaml  pyinstaller.spec  pyproject.toml  pyrightconfig.json
.github/workflows/: build-release.yaml
src/: entities.py  notifier.py
src/application/services/: ticker.py
src/aw_nextblock/: __init__.py  __main__.py  cli.py  commands.py  config.py  main.py  main_loop.py  monitor.py  plans.py  reporter.py  session.py  state_handler.py  watcher.py
src/aw_nextblock/core/: __init__.py  entities.py  plans.py  session_watcher.py  state.py
src/aw_nextblock/datamodels/: __init__.py  config.py  entities.py  state.py
src/aw_timeblock/datamodels/: plan.py
src/aw_watcher_nextblock/: __init__.py  __main__.py  monitor.py  reporter.py
src/domain/: events.py  timebox.py  work_session.py
src/shared/: __init__.py  config.py  entities.py  state.py
visualization/: index.css  index.html  index.js
