[project]
name = "aw-nextblock"
version = "0.1.0"
description = "aw watcher and cli tool to do timeblocking diferently"
authors = [
    {name = "felixzsh",email = "felix.sanchez.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "aw-client (>=0.5.15,<0.6.0)",
    "click (>=8.3.0,<9.0.0)",
    
]

[project.scripts]
nextblock-ctl = "aw_nextblock.cli:cli"
aw-watcher-nextblock = "aw_nextblock.__main__:main"

[tool.poetry]
packages = [
    {include = "aw_nextblock", from = "src"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
