[project]
name = "aw-nextblock"
version = "0.1.0"
description = "cli tool for activity watch to do timeblocking diferently"
authors = [
    {name = "felixzsh",email = "felix.sanchez.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "aw-client (>=0.5.15,<0.6.0)",
    "click (>=8.3.0,<9.0.0)",
    "desktop-notifier (>=6.2.0,<7.0.0)",
    
]

[project.scripts]
aw-nextblock = "aw_nextblock:cli"

[tool.poetry]
packages = [
    {include = "aw_nextblock", from = "src"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]
